--- a/front/src/index.scss
+++ b/front/src/index.scss
@@ -1,3 +1,4 @@
+/*
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -14,7 +15,7 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
-
+*/
 a {
   font-weight: 500;
   color: #646cff;
@@ -23,14 +24,14 @@ a {
 a:hover {
   color: #535bf2;
 }
-
+/*
 body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-}
+}*/
 
 h1 {
   font-size: 3.2em;
