--- a/front/src/App.css
+++ b/front/src/App.css
@@ -39,3 +39,17 @@
 .read-the-docs {
   color: #888;
 }
+
+.delete {
+  right: 0.5rem;
+  position: absolute;
+  top: 0.5rem;
+}
+
+.box {
+  position: relative;
+}
+
+.media {
+  position: relative;
+}
