--- a/front/src/App.css
+++ b/front/src/App.css
@@ -39,7 +39,7 @@
 .read-the-docs {
   color: #888;
 }
-
+/*
 .delete {
   right: 0.5rem;
   position: absolute;
@@ -53,3 +53,4 @@
 .media {
   position: relative;
 }
+*/
