ajout du serviceWorker pour l'authentification , utilisation de Navigate dans App.jsx pour les redirections en cas de connexion/non connexion

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -58,3 +58,14 @@
 .margin-left {
   margin-left: 17px;
 }
+
+.bgprimary {
+  background-color: #fd2d01;
+}
+
+.colorwhite {
+  color: white;
+}
+.objcover {
+  object-fit: cover;
+}
